# AIS

./: AIS.sln  CMakeLists.txt  README.md
.github/workflows/: ci.yml
AIS/: AIS.cpp  AIS.h  AIS.vcxproj  AIS.vcxproj.filters  AIS_Tests.cpp  AISbase.cpp  AISbase.h  AISmod.cpp  AISmod.h  Antibody.cpp  Antibody.h  Cell.cpp  Cell.h  Cellbase.cpp  Cellbase.h  Cellmod.cpp  Cellmod.h  Options.h  Simulator.cpp  Simulator.h  main.cpp  myutils.cpp  myutils.h  testing.cpp  testing.h  tests.csv
AIS-TEST/: AIS-TEST.vcxproj  test.cpp
AIS/.github/workflows/: ci.yml
Sample-Test1/: Sample-Test1.vcxproj  test.cpp
